--- a/index.html
+++ b/index.html
@@ -628,8 +628,8 @@
             <img src="./assets/faqImage.jpg" alt="faqImage" class="faqImage" />
             <div class="inner-box">
               <p class="para">
-                The 3T MRI machine offers higher resolution images, providing
-                greater detail and clarity for more accurate diagnoses.
+                If you have more questions regarding your scan, please feel free
+                to contact us
               </p>
               <a href="callto:(877) MRI-8888" class="btn btn-light-blue">
                 <p>Call us : (877) MRI-8888</p>
@@ -697,43 +697,57 @@
         </div>
       </footer>
 
-      <div id="myModal" class="modal">
+      <div id="myModal" class="modal show-modal">
         <div class="modal-content">
           <button class="close-btn"></button>
           <div class="modal-body">
             <div class="left">
-              <div
-                style="
-                  --swiper-navigation-color: #fff;
-                  --swiper-pagination-color: #fff;
-                "
-                class="swiper mySwiper"
-              >
+              <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
                     <div class="swiper-zoom-container">
                       <img src="./assets/brain.jpg" />
+                      <div class="body">
+                        <h4>
+                          State of the art facility in all our ExpertMRI centers
+                        </h4>
+                      </div>
                     </div>
                   </div>
                   <div class="swiper-slide">
                     <div class="swiper-zoom-container">
                       <img
-                        src="https://swiperjs.com/demos/images/nature-2.jpg"
+                        src="./assets/brain.jpg"
                       />
+                      <div class="body">
+                        <h4>
+                          State of the art facility in all our ExpertMRI centers
+                        </h4>
+                      </div>
                     </div>
                   </div>
                   <div class="swiper-slide">
                     <div class="swiper-zoom-container">
                       <img
-                        src="https://swiperjs.com/demos/images/nature-3.jpg"
+                        src="./assets/brain.jpg"
                       />
+                      <div class="body">
+                        <h4>
+                          State of the art facility in all our ExpertMRI centers
+                        </h4>
+                      </div>
                     </div>
                   </div>
                   <div class="swiper-slide">
                     <div class="swiper-zoom-container">
                       <img
-                        src="https://swiperjs.com/demos/images/nature-4.jpg"
+                        src="./assets/brain.jpg"
                       />
+                      <div class="body">
+                        <h4>
+                          State of the art facility in all our ExpertMRI centers
+                        </h4>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -764,10 +778,10 @@
         effect: "fade",
         centeredSlides: true,
         grabCursor: false,
-        autoplay: {
-          delay: 3500,
-          disableOnInteraction: false,
-        },
+        // autoplay: {
+        //   delay: 3500,
+        //   disableOnInteraction: false,
+        // },
       });
     </script>
     <script>
