--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="shortcut icon"
-      href="./assets/logo/logoIconLight.png"
+      href="./assets/image/logo-xicon.svg"
       type="image/x-icon"
     />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
   </head>
 
@@ -21,12 +26,12 @@
       <nav class="navbar">
         <div class="container">
           <div class="col-6 left">
-            <img src="./assets/logo/logoLight.webp" alt="" />
+            <img src="./assets/image/logoLight.webp" alt="" />
           </div>
           <div class="col-6 right">
             <div class="location">
               <img
-                src="./assets/icon/location.svg"
+                src="./assets/image/location.svg"
                 class="icon"
                 alt="location"
               />
@@ -34,14 +39,20 @@
             </div>
             <div class="number">
               <p class="para">Request An Appointment</p>
-              <a class="callBtn" href="callto:(877) 674-8888">(877) 674-8888</a>
+              <a class="callBtn underlineAnim" href="callto:(877) 674-8888"
+                >(877) 674-8888</a
+              >
             </div>
           </div>
         </div>
       </nav>
       <section class="hero">
         <div class="container">
-          <img src="./assets/heroBg-Person.png" alt="person" class="personBg" />
+          <img
+            src="./assets/image/heroBg-Person.png"
+            alt="person"
+            class="personBg"
+          />
           <div class="col-6 left">
             <h2 class="herohead">
               <span class="libra">Grand Opening</span> of Our New
@@ -59,7 +70,7 @@
           </div>
           <div class="col-6 right">
             <img
-              src="./assets/heroImg.png"
+              src="./assets/image/heroImg.png"
               alt="hero image"
               class="rightImage"
             />
@@ -72,13 +83,17 @@
           <div class="top">
             <div class="col-6 left">
               <img
-                src="./assets/facilityImg.jpg"
+                src="./assets/image/facilityImg.jpg"
                 alt="facility"
                 class="facility"
               />
             </div>
             <div class="col-6 right">
-              <img src="./assets/sheild.png" alt="sheild" class="sheild" />
+              <img
+                src="./assets/image/sheild.png"
+                alt="sheild"
+                class="sheild"
+              />
               <h2>Enhanced Diagnostic Accuracy</h2>
               <p class="para">
                 With superior imaging capabilities, the 3T MRI can detect
@@ -298,12 +313,12 @@
           <div class="top">
             <div class="reviews-card">
               <img
-                src="./assets/icon/Google.png"
+                src="./assets/image/Google.png"
                 alt="Google"
                 class="google icon-mid"
               />
               <img
-                src="./assets/icon/star.svg"
+                src="./assets/image/star.svg"
                 alt="Star"
                 class="star icon-mid"
               />
@@ -323,7 +338,7 @@
               <ul class="marquee-item-list">
                 <li>
                   <img
-                    src="./assets/testimonial-logo.png"
+                    src="./assets/image/testimonial-logo.png"
                     class="testi-logo"
                     alt="testimonial-logo"
                   />
@@ -338,7 +353,7 @@
                 </li>
                 <li>
                   <img
-                    src="./assets/testimonial-logo.png"
+                    src="./assets/image/testimonial-logo.png"
                     class="testi-logo"
                     alt="testimonial-logo"
                   />
@@ -353,7 +368,7 @@
                 </li>
                 <li>
                   <img
-                    src="./assets/testimonial-logo.png"
+                    src="./assets/image/testimonial-logo.png"
                     class="testi-logo"
                     alt="testimonial-logo"
                   />
@@ -368,7 +383,7 @@
                 </li>
                 <li>
                   <img
-                    src="./assets/testimonial-logo.png"
+                    src="./assets/image/testimonial-logo.png"
                     class="testi-logo"
                     alt="testimonial-logo"
                   />
@@ -383,7 +398,7 @@
                 </li>
                 <li>
                   <img
-                    src="./assets/testimonial-logo.png"
+                    src="./assets/image/testimonial-logo.png"
                     class="testi-logo"
                     alt="testimonial-logo"
                   />
@@ -398,7 +413,7 @@
                 </li>
                 <li>
                   <img
-                    src="./assets/testimonial-logo.png"
+                    src="./assets/image/testimonial-logo.png"
                     class="testi-logo"
                     alt="testimonial-logo"
                   />
@@ -426,7 +441,11 @@
             Introducing Our State-of-the-Art <span>3T MRI Machine</span> at
             ExpertMRI Costa Mesa
           </h2>
-          <img src="./assets/mri.png" alt="mri image" class="hospitalMri" />
+          <img
+            src="./assets/image/mri.png"
+            alt="mri image"
+            class="hospitalMri"
+          />
         </div>
       </section>
 
@@ -479,7 +498,7 @@
             </div>
           </div>
           <div class="col-6 right">
-            <img src="./assets/human-body.png" alt="" />
+            <img src="./assets/image/human-body.png" alt="" />
           </div>
         </div>
       </section>
@@ -489,7 +508,7 @@
           <div class="card">
             <div class="card-head">
               <span class="number">01</span>
-              <img src="./assets/whyusCard1.png" alt="why choose us" />
+              <img src="./assets/image/whyusCard1.png" alt="why choose us" />
             </div>
             <div class="card-body">
               <h4 class="head">Reduced Need for Contrast Agents</h4>
@@ -503,7 +522,7 @@
           <div class="card">
             <div class="card-head">
               <span class="number">02</span>
-              <img src="./assets/whyusCard2.png" alt="why choose us" />
+              <img src="./assets/image/whyusCard2.png" alt="why choose us" />
             </div>
             <div class="card-body">
               <h4 class="head">Unmatched Image Quality</h4>
@@ -528,11 +547,17 @@
             <div class="left-box">
               <div class="details">
                 <h6 class="title">Phone</h6>
-                <p class="para">(877) MRI-8888</p>
+                <a class="para underlineAnim-dark" href="callto:(877)MRI-8888"
+                  >(877) MRI-8888</a
+                >
               </div>
               <div class="details">
                 <h6 class="title">Email</h6>
-                <p class="para">scheduling@expertmri.com</p>
+                <a
+                  class="para underlineAnim-dark"
+                  href="mailto:scheduling@expertmri.com"
+                  >scheduling@expertmri.com</a
+                >
               </div>
             </div>
             <button class="btn btn-blue">
@@ -540,13 +565,14 @@
               <span class="icon map-icon"></span>
             </button>
           </div>
-          <div class="col-6 right"></div>
-          <div class="box">
-            <div class="text">
-              <span class="icon map-icon"></span>
-              <h6>Locations all through southern California</h6>
+          <div class="col-6 right">
+            <div class="box">
+              <div class="text">
+                <span class="icon map-icon"></span>
+                <h6>Locations all through southern California</h6>
+              </div>
+              <img src="./assets/image/location-bg.png" alt="location image" />
             </div>
-            <img src="./assets/location-bg.png" alt="location image" />
           </div>
         </div>
       </section>
@@ -625,7 +651,11 @@
             </div>
           </div>
           <div class="col-6 right">
-            <img src="./assets/faqImage.jpg" alt="faqImage" class="faqImage" />
+            <img
+              src="./assets/image/faqImage.jpg"
+              alt="faqImage"
+              class="faqImage"
+            />
             <div class="inner-box">
               <p class="para">
                 If you have more questions regarding your scan, please feel free
@@ -656,11 +686,13 @@
             <div class="left">
               <div class="details">
                 <p>Phone</p>
-                <a href="callto:(877) MRI-8888">(877) MRI-8888</a>
+                <a class="underlineAnim" href="callto:(877) MRI-8888"
+                  >(877) MRI-8888</a
+                >
               </div>
               <div class="details">
                 <p>Email</p>
-                <a href="mailto:scheduling@expertmri.com"
+                <a class="underlineAnim" href="mailto:scheduling@expertmri.com"
                   >scheduling@expertmri.com</a
                 >
               </div>
@@ -690,7 +722,7 @@
             </div>
           </div>
           <img
-            src="./assets/logo/ExpertMRI.svg"
+            src="./assets/image/ExpertMRI.svg"
             alt="logo icon"
             class="footerLogo"
           />
@@ -706,7 +738,7 @@
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
                     <div class="swiper-zoom-container">
-                      <img src="./assets/brain.jpg" />
+                      <img src="./assets/image/brain.jpg" />
                       <div class="body">
                         <h4>
                           State of the art facility in all our ExpertMRI centers
@@ -716,9 +748,7 @@
                   </div>
                   <div class="swiper-slide">
                     <div class="swiper-zoom-container">
-                      <img
-                        src="./assets/brain.jpg"
-                      />
+                      <img src="./assets/image/brain.jpg" />
                       <div class="body">
                         <h4>
                           State of the art facility in all our ExpertMRI centers
@@ -728,9 +758,7 @@
                   </div>
                   <div class="swiper-slide">
                     <div class="swiper-zoom-container">
-                      <img
-                        src="./assets/brain.jpg"
-                      />
+                      <img src="./assets/image/brain.jpg" />
                       <div class="body">
                         <h4>
                           State of the art facility in all our ExpertMRI centers
@@ -740,9 +768,7 @@
                   </div>
                   <div class="swiper-slide">
                     <div class="swiper-zoom-container">
-                      <img
-                        src="./assets/brain.jpg"
-                      />
+                      <img src="./assets/image/brain.jpg" />
                       <div class="body">
                         <h4>
                           State of the art facility in all our ExpertMRI centers
@@ -778,10 +804,10 @@
         effect: "fade",
         centeredSlides: true,
         grabCursor: false,
-        // autoplay: {
-        //   delay: 3500,
-        //   disableOnInteraction: false,
-        // },
+        autoplay: {
+          delay: 3500,
+          disableOnInteraction: false,
+        },
       });
     </script>
     <script>
